# agents

./: .gitignore
1_foundations/: 1_lab1.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb  README.md  app.py
1_foundations/me/: summary_1.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/community_contributions/kachaje-andela-genai-bootcamp/: .gitignore  ctl.sh  deep_research.py  email_agent.py  planner_agent.py  pyproject.toml  requirements.txt  research_manager.py  search_agent.py  writer_agent.py
2_openai/community_contributions/kachaje-andela-genai-bootcamp/tests/: __init__.py  test_email.py  test_multiply.py  test_web_search.py
2_openai/community_contributions/kachaje-andela-genai-bootcamp/tools/: __init__.py  email.py  multiply.py  web_search.py
2_openai/community_contributions/kachaje-andela-genai-bootcamp/utils/: __init__.py  globals.py  local_logger.py  logger.py
3_crew/community_contributions/student_companion/: README.md  pyproject.toml
3_crew/community_contributions/student_companion/outputs/: 0_intent_recognizing_task_report.md  1_topic_generation_task_report.md  2_study_content_generation_task_report.md  3_question_generator_task_report.md  4_formatted_report.md
3_crew/community_contributions/student_companion/src/student_companion/: crew.py  main.py
3_crew/community_contributions/student_companion/src/student_companion/config/: agents.yaml  tasks.yaml
4_langgraph/community_contributions/emmy_sidekick/: .gitignore  README.md  main.py  pyproject.toml
4_langgraph/community_contributions/emmy_sidekick/src/: __init__.py  config.py  external_services.py  graph.py  llm.py  models.py  nodes.py  ui.py
4_langgraph/community_contributions/kachaje-andela-genai-bootcamp/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
4_langgraph/community_contributions/kachaje-andela-genai-bootcamp/backend/: file_creator.py  llm_client.py  main.py  models.py  state_manager.py  web_search.py
4_langgraph/community_contributions/kachaje-andela-genai-bootcamp/backend/utils/: logger.py
4_langgraph/community_contributions/kachaje-andela-genai-bootcamp/frontend/: gradio_ui.py
(+192 files in other folders)
