[project]
name = "deep_research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.49.1",
    "openai>=2.7.1",
    "openai-agents>=0.4.2",
    "sendgrid>=6.12.5",
    "ddgs>=4.0.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
