[project]
name = "student_companion"
version = "0.1.0"
description = "student_companion using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]>=0.203.1,<1.0.0",
]

[project.scripts]
student_companion = "student_companion.main:run"
run_crew = "student_companion.main:run"
train = "student_companion.main:train"
replay = "student_companion.main:replay"
test = "student_companion.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
